src/test/test-models/good/parser-generator/prim_var_param_block.stan
parameters {
  real p2;
  real<lower=0, upper=1> ar_p2[4];
}
