src/test/test-models/bad/validate_set_double_locscale_bad6.stan
parameters {
  real<scale=positive_infinity()> a;
  real y;
}

model {
  y ~ normal(0,1);
}
